--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,71 @@
+/* #colors  
+    bgDark : #25252D;
+    primary color: #457AA9
+*/
+.medium-text {
+  font-size: 16px;
+}
+.tcBlue {
+  color: #457AA9;
+}
+.appTitle {
+  font-weight: 600;
+}
 .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #efefef;
+}
+body {
+  margin: 0px;
+  padding: 0px;
+  /* font-family: 'Roboto', sans-serif; */
+  font-family: "Montserrat", sans-serif;
+  /* font-family: 'Lato', sans-serif; */
+}
+.navbar {
+  background-color: #25252d;
+  border-radius: 0;
+}
+.navbar li > a:hover {
+  color: #457AA9 !important;
+}
+.navbar li > a {
+  color: #efefef !important;
+}
+.navbar .navbar-brand {
+  font-weight: 600;
+  font-size: 24px;
+  color: #efefef !important;
+  margin-right: 30px;
+}
+.navbar .navbar-brand span {
+  color: #457aa9;
+}
+.signupForm input[type="text"],
+.signupForm input[type="password"] {
+  color: #457aa9;
+  border: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  border-bottom: 1px solid #25252d !important;
+}
+.signupForm input[type="text"]:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.signupForm .btn-block {
+  width: auto;
+  margin: 0 auto;
+  margin-top: 30px;
+  border-radius: 1px;
+}
+.signupForm .input-group-addon:first-child {
+  border-right: 0;
+  background: none;
+  color: #457aa9;
+  border: none;
 }
